fix: z-index

--- a/src/pages/index/styles/blocks/_about.scss
+++ b/src/pages/index/styles/blocks/_about.scss
@@ -10,7 +10,7 @@
     content: "";
     
     position: absolute;
-    z-index: -1;
+    z-index: -2;
 
     background-repeat: no-repeat;
     background-size: contain;
